--- a/templates/index.html
+++ b/templates/index.html
@@ -5,56 +5,10 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Olá, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-    {% if not known %}
-    <p>Prazer em conhecê-lo!</p>
-    {% else %}
-    <p>Feliz em vê-lo novamente!</p>
-    {% endif %}
+    <h1>Avaliação semestral</h1>
+    <br>
+    <p>Aluno:Miguel Oliveira</p>
+    <p>Prontuário: PT3032442</p>
 </div>
-{{ wtf.quick_form(form) }}
-
-<h2>Relação de usuários cadastrados</h2>
-<h4>Quantidade: {{user_all|length}}</h4>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Nome do usuário</th>
-            <th>Função</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for key in user_all %}
-        <tr>
-            <td>{{ key.username }}</td>
-            <td>{{ key.role.name }}</td>            
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h2>Relação de funções cadastradas</h2>
-<h4>Quantidade: {{role_all|length}}</h4>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Funções</th> 
-            <th>Usuários</th>           
-        </tr>
-    </thead>
-    <tbody>
-        {% for r in role_all %}
-        <tr>
-            <td>{{ r.name }}</td>   
-            <td>
-                <ol>
-                    {% for u in r.users.all() %}
-                    <li>{{ u.username }}</li>
-                    {% endfor %}
-                </ol>                
-            </td>                  
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
 
 {% endblock %}
