Fix spacing in student name paragraph

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 <div class="page-header">
     <h1>Avaliação semestral</h1>
     <br>
-    <p>Aluno:Miguel Oliveira</p>
+    <p>Aluno: Miguel Oliveira</p>
     <p>Prontuário: PT3032442</p>
 </div>
-
+<p>A data e hora local é {{ moment(hora).format('LLL') }}. </p> 
 {% endblock %}
