--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,8 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Avaliação semestral</h1>
-    <br>
-    <p>Aluno: Miguel Oliveira</p>
-    <p>Prontuário: PT3032442</p>
+    <h2>Aluno: Miguel Oliveira</h2>
+    <h2>Prontuário: PT3032442</h2>
 </div>
 <p>A data e hora local é {{ moment(hora).format('LLL') }}. </p> 
 {% endblock %}
