--- a/templates/nDisponivel.html
+++ b/templates/nDisponivel.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Não Disponível</h1>
+    <h1>Não disponível</h1>
 </div>
 <p>A data e hora local é {{ moment(hora).format('LLL') }}. </p> 
 {% endblock %}
