Update link for Cadastro de Cursos

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <li><a href="/professores">Cadastro de Professores</a></li>
                 <li><a href="/disciplinas">Cadastro de Disciplinas</a></li>
                 <li><a href="/alunos">Cadastro de Alunos</a></li>
-                <li><a href="/">Cadastro de Cursos</a></li>
+                <li><a href="/cursos">Cadastro de Cursos</a></li>
                 <li><a href="/ocorrencias">Cadastro de Ocorrências</a></li>
             </ul>
         </div>
