--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -12,9 +12,11 @@
 {% block page_content %}
 
 <div class="container">
+{{ wtf.quick_form(form) }}
+<h2>Relação de cursos cadastrados</h2>
 
 </div>
 
-{{ wtf.quick_form(form) }}
+
 
 {% endblock %}
